[package]
name = "filesort"
version = "1.2.2"
edition = "2021"
authors = ["yelircaasi <isaac.r.riley@gmail.com"]
description = "filesort is an automatic file sorting application that sorts your files into folders based on their file extension. With filesort, you can easily keep your files organized and find what you need quickly."
repository = "https://github.com/yelircaasi/filesort"
license = "MIT"
readme = "README.md"
keywords = ["file", "sort", "automatic", "extension"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
rand = "0.8.5"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }

[profile.release]
opt-level = 3
debug = false
panic = "abort"
codegen-units = 16
lto = true
incremental = false

#Cross targets | Command: cross build --release --target <target>
#x86_64-unknown-linux-gnu
#x86_64-pc-windows-msvc
#x86_64-unknown-freebsd
